--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="/css/bootstrap.css">
+    <link rel="stylesheet" href="css/bootstrap.css">
     <link rel="stylesheet" href="sample.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css" integrity="sha512-z3gLpd7yknf1YoNbCzqRKc4qyor8gaKU1qmn+CShxbuBusANI9QpRohGBreCFkKxLhei6S9CQXFEbbKuqLg0DA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <script type="text/javascript"
@@ -70,7 +70,7 @@
             <p class="lead">I am a passionate and dedicated software trainee, eager to learn and contribute to the world of technology. Currently exploring the realms of software development, I am committed to expanding my skills and knowledge to create innovative solutions that make a positive impact.</p>
             <p class="lead">I believe in the power of creativity collaboration innovation and strive to bring a uniqueperspective to every project. Explore my portfolio to see examples of my work andfeel free to get in touch to discuss how we can collaborate on your next design development art project.</p></div>
           <div class="col-sm-6 ">
-            <img src="/portimagges/Mybwpic2.jpg" alt="My image" class="img-fluid circle myphoto">
+            <img src="portimagges/Mybwpic2.jpg" alt="My image" class="img-fluid circle myphoto">
           </div>
         </div>
       </div>
@@ -117,10 +117,10 @@
           <div class="row ">
             <div class="prohead border-bottom text-danger mt-5"><h2>MY RECENT PROJECT</h2></div>
               <div class="col-md-6 mt-5">
-                <img class="linkdin" src="/portimagges/linkdin photo.png">
+                <img class="linkdin" src="portimagges/linkdin photo.png">
           </div>
           <div class="col-md-6 mt-5">
-            <img class="wphoto" src="/portimagges/w3photo.png">
+            <img class="wphoto" src="portimagges/w3photo.png">
         
       </div>
           
@@ -199,7 +199,7 @@
    </script>
 
     <script src="index.js"></script>
-    <script src="/js/bootstrap.js"></script>
+    <script src="js/bootstrap.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js" integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r" crossorigin="anonymous" ></script>
 </body>
 </html>
