--- a/index.html
+++ b/index.html
@@ -3,8 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Rashique</title>
     <link rel="stylesheet" href="css/bootstrap.css">
+    <link rel="shortcut icon" href="portimagges/Mybwpic2.jpg" type="image/x-icon">
     <link rel="stylesheet" href="sample.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css" integrity="sha512-z3gLpd7yknf1YoNbCzqRKc4qyor8gaKU1qmn+CShxbuBusANI9QpRohGBreCFkKxLhei6S9CQXFEbbKuqLg0DA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <script type="text/javascript"
@@ -17,7 +18,7 @@
     <!-- NAVIGATIO BAR STARTS-->
     
     <nav class="navbar navbar-expand-lg bg-black text-light fixed-top">
-         <h3>@rashiq</h3>
+         <h3>@rashique</h3>
           <button class="navbar-toggler bg-secondary" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon bg-secondary"></span>
           </button>
@@ -36,7 +37,7 @@
                 <a class="nav-link px-lg-4" href="#works">Project</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link px-lg-4" href="#contact">contact</a>
+                <a class="nav-link px-lg-4" href="#contact">Contact</a>
               </li>
             </ul>
           </div>
@@ -49,9 +50,9 @@
         <div class="container py-5  backgrnd">
             <div class="row py-5">
                 <div class="col-lg-6 py-5">
-                    <h1><small>im </small><span class="name text-danger">RASHIQUE</span></h1>
-                    <h4>im a passionate web developer<br>
-                   <p> i am a trainer in this industry.my mission is to complete impaciful website that inspire and engage audience.feel free to get in touch to discuss how we can collaborate on your next design</p></h4>
+                    <h1><small>Im </small><span class="name text-danger">RASHIQUE</span></h1>
+                    <h4>Im a passionate web developer<br>
+                   <p> I am a trainer in this industry.my mission is to complete impaciful website that inspire and engage audience.feel free to get in touch to discuss how we can collaborate on your next design</p></h4>
             </div>
         </div>
         </div>
